# django-concierge

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
django_concierge/: admin.py  apps.py  models.py  urls.py  views.py
django_concierge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_concierge/migrations/: 0001_initial.py
django_concierge/static/js/: snoop.js
django_concierge/templates/concierge/: concierge_js_header.html
