[metadata]
name = django-concierge
version = 0.1
description = A Django app to gather basic web analytics.
long_description = file: README.rst
url = https://www.example.com/
author = Alexander Whillas
author_email = whillas+opensource@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0.7
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires =
    Django >= 5.0.7
    ua_parser[re2] == 0.18.0
    django-ipware == 7.0.1